--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,14 @@
   "extends": [
     "config:recommended"
   ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": ["Containerfile"],
+      "matchStrings": ["--with (?<depName>[^@]+)@(?<currentValue>[^\\s\\\\]+)"],
+      "datasourceTemplate": "go"
+    }
+  ],
   "packageRules": [
     {
       "matchCategories": ["docker", "ci"],
