--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
   ],
   "packageRules": [
     {
-      "matchCategories": ["docker", "ci"],
+      "matchCategories": ["docker", "ci", "custom"],
       "groupName": "references",
       "groupSlug": "references",
       "pinDigests": true,
